[tool.poetry]
name = "biocypher-meta-graph"
version = "0.2.2"
description = "BioCypher pipeline to visualise the components of existing and planned BioCypher pipelines"
authors = [
    "Sebastian Lobentanzer <sebastian.lobentanzer@gmail.com>",
    "Andreas Maier <andreas.maier-1@uni-hamburg.de>",
]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
biocypher = "^0.5.16"
requests = "^2.28.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
